# jipp2

./: .gitignore
lab1/: compile.sh  readme.md  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
lab2/: readme.md  zad1.cpp  zad2.cpp  zad3.cpp  zad4.cpp  zad5.cpp
lab3/: compile.sh  matrix.cpp  matrix.hpp  readme.md  zad.cpp
lab4/: CMakeLists.txt  compile.sh  readme.md
lab4/src/: main.cpp  matrix.cpp
lab4_exceptions/: compile.sh  readme.md
lab4_exceptions/src/: main.cpp  matrix.cpp
lab4_sqlite/: CMakeLists.txt  readme.md
lab4_sqlite/include/lab4/: matrix.hpp
lab4_sqlite/libs/sqlite3/: CMakeLists.txt
lab4_sqlite/src/: main.cpp  matrix.cpp
lab5/: .gitignore  CMakeLists.txt  compile.sh  readme.md
lab5/include/lab4/: matrix.hpp
lab5/src/: main.cpp  matrix.cpp
lab6/: CMakeLists.txt  compile.sh  readme.md
lab6/include/lab6/: hrms.hpp
lab6/src/: employee.cpp  hrms.cpp  main.cpp  matrix.cpp
lab8/: CMakeLists.txt  compile.sh  readme.md
lab8/src/: main.cpp  multi_mutex.cpp  multi_mutex.hpp
projekt/: .gitignore  CMakeLists.txt  compile.sh  readme.md
projekt/include/projekt/: command.hpp  employee.hpp  hrms.hpp  user.hpp
projekt/src/: command.cpp  employee.cpp  hrms.cpp  main.cpp  user.cpp
